--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2062,7 +2062,7 @@ nav {
 
 .section-why {
   background-color: rgba(228, 65, 38, 0.5);
-  background-image: url("../img/bg-why.png");
+ // background-image: url("../img/bg-why.png");
   background-blend-mode: hard-light;
   background-size: cover;
   background-repeat: no-repeat;
