--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2522,7 +2522,7 @@ nav {
       //position: relative !important;
       float: right !important;
       width: 50px !important;
-     // border: 1px solid #ccc;
+      // border: 1px solid #ccc;
       z-index: 10;
     }
 
@@ -2551,6 +2551,10 @@ nav {
     margin-top: 10px;
     overflow-y: hidden;
     overflow-x: auto;
+
+    li {
+      max-width: calc(100% / 5);
+    }
   }
   .owl-dot-green {
     .owl-dots {
