--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2965,5 +2965,10 @@ nav {
     max-height: 100% !important;
     height: 100%;
   }
+
+  span {
+    max-width: 100% !important;
+    height: auto !important;
+  }
 }
 
