--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2966,7 +2966,8 @@ nav {
     height: 100%;
   }
 
-  span {
+  span, p {
+    min-font-size: 16px !important;
     max-width: 100% !important;
     height: auto !important;
   }
