--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2959,7 +2959,7 @@ nav {
   }
 }
 
-.single-blog-post, .blog-page {
+.single-blog-post, #blog-page {
   img {
     max-width: 100% !important;
     max-height: 100% !important;
