--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2963,7 +2963,7 @@ nav {
   img {
     max-width: 100% !important;
     max-height: 100% !important;
-    height: 100%;
+    height: auto;
   }
 
   span, p {
