--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -729,6 +729,14 @@ nav {
   background-color: $bg-xam;
 }
 
+.text-decoration-none {
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: none;
+  }
+}
+
 .blog-post {
   background: white;
 
@@ -947,6 +955,10 @@ nav {
       border: 1px solid $color-red;
     }
   }
+}
+
+.bg-brand {
+  background: $color-red;
 }
 
 .btn-contact {
@@ -2973,3 +2985,29 @@ nav {
   }
 }
 
+.popular-posts .img {
+  width: 200px;
+  height: 100px;
+  overflow: hidden;
+  display: flex;
+
+  img {
+    width: 100% !important;
+    height: 100% !important;
+    display: flex;
+    object-fit: cover;
+  }
+}
+
+.form-search {
+  position: absolute;
+  bottom: -55px;
+  width: 400px;
+  right: 20px;
+  display: none;
+  transition: 0.5s;
+  height: 55px;
+  &.is_show{
+    display: block;
+  }
+}
