--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2985,17 +2985,22 @@ nav {
   }
 }
 
-.popular-posts .img {
-  width: 200px;
-  height: 100px;
-  overflow: hidden;
-  display: flex;
-
-  img {
-    width: 100% !important;
-    height: 100% !important;
+.popular-posts {
+  .pr-0{
+    padding-right: 0;
+  }
+  .img {
+    width: 100%;
+    height: 100px;
+    overflow: hidden;
     display: flex;
-    object-fit: cover;
+
+    img {
+      width: 100% !important;
+      height: 100% !important;
+      display: flex;
+      object-fit: cover;
+    }
   }
 }
 
@@ -3007,7 +3012,8 @@ nav {
   display: none;
   transition: 0.5s;
   height: 55px;
-  &.is_show{
+
+  &.is_show {
     display: block;
   }
 }
