--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2867,13 +2867,18 @@ nav {
   background-color: #E44126;;
 }
 
-.tab-content {
-  p {
+.tab-content, .single-blog-post {
+  h1, h2, h3, h4, h5, h6 {
+    p, span {
+      font-size: inherit;
+    }
+  }
+
+  p, span, small, strong, a, b {
     font-size: 16px;
-    min-font-size: 16px !important;
+    font-family: arial, sans-serif !important;
   }
 }
-
 
 .brochure {
 
@@ -2986,9 +2991,10 @@ nav {
 }
 
 .popular-posts {
-  .pr-0{
+  .pr-0 {
     padding-right: 0;
   }
+
   .img {
     width: 100%;
     height: 100px;
