--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2559,6 +2559,8 @@ nav {
     }
   }
   .list-thumb {
+    list-style: none;
+    padding: 0;
     display: flex;
     margin-top: 10px;
     overflow-y: hidden;
