--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2908,7 +2908,7 @@ strong {
   }
 
   p, span, small, strong, a, b, li, figcaption {
-    font-size: 16px;
+    //font-size: initial;
     font-family: arial, sans-serif !important;
   }
 }
