--- a/frontend/janami/web/css/pink-theme.css
+++ b/frontend/janami/web/css/pink-theme.css
@@ -367,56 +367,56 @@ body {
 /*  HEADERS
 /*------------------------------------------*/
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Lustria', serif;
-  line-height: 1.3;
-  font-weight: 700;
-  letter-spacing: 1px;
-}
+/*h1, h2, h3, h4, h5, h6 {*/
+/*  font-family: 'Lustria', serif;*/
+/*  line-height: 1.3;*/
+/*  font-weight: 700;*/
+/*  letter-spacing: 1px;*/
+/*}*/
 
 /* Header H6 */
-h6.h6-xs { font-size: 1.0625rem; }   /* 17px */
-h6.h6-sm { font-size: 1.125rem; }    /* 18px */
-h6.h6-md { font-size: 1.15625rem; }  /* 18.5px */
-h6.h6-lg { font-size: 1.1875rem; }   /* 19px */
-h6.h6-xl { font-size: 1.21875rem; }  /* 19.5px */
+/*h6.h6-xs { font-size: 1.0625rem; }   !* 17px *!*/
+/*h6.h6-sm { font-size: 1.125rem; }    !* 18px *!*/
+/*h6.h6-md { font-size: 1.15625rem; }  !* 18.5px *!*/
+/*h6.h6-lg { font-size: 1.1875rem; }   !* 19px *!*/
+/*h6.h6-xl { font-size: 1.21875rem; }  !* 19.5px *!*/
 
-/* Header H5 */
-h5.h5-xs { font-size: 1.25rem; }    /* 20px */
-h5.h5-sm { font-size: 1.375rem; }   /* 22px */
-h5.h5-md { font-size: 1.5rem; }     /* 24px */
-h5.h5-lg { font-size: 1.625rem; }   /* 26px */
-h5.h5-xl { font-size: 1.75rem; }    /* 28px */
+/*!* Header H5 *!*/
+/*h5.h5-xs { font-size: 1.25rem; }    !* 20px *!*/
+/*h5.h5-sm { font-size: 1.375rem; }   !* 22px *!*/
+/*h5.h5-md { font-size: 1.5rem; }     !* 24px *!*/
+/*h5.h5-lg { font-size: 1.625rem; }   !* 26px *!*/
+/*h5.h5-xl { font-size: 1.75rem; }    !* 28px *!*/
 
-/* Header H4 */
-h4.h4-xs { font-size: 1.875rem; }   /* 30px */
-h4.h4-sm { font-size: 2rem; }       /* 32px */
-h4.h4-md { font-size: 2.125rem; }   /* 34px */
-h4.h4-lg { font-size: 2.25rem; }    /* 36px */
-h4.h4-xl { font-size: 2.375rem; }   /* 38px */
+/*!* Header H4 *!*/
+/*h4.h4-xs { font-size: 1.875rem; }   !* 30px *!*/
+/*h4.h4-sm { font-size: 2rem; }       !* 32px *!*/
+/*h4.h4-md { font-size: 2.125rem; }   !* 34px *!*/
+/*h4.h4-lg { font-size: 2.25rem; }    !* 36px *!*/
+/*h4.h4-xl { font-size: 2.375rem; }   !* 38px *!*/
 
-h3.h3-xs { font-size: 2.5rem; }     /* 40px */
-h3.h3-sm { font-size: 2.625rem; }   /* 42px */
-h3.h3-md { font-size: 2.75rem; }    /* 44px */
-h3.h3-lg { font-size: 2.875rem; }   /* 46px */
-h3.h3-xl { font-size: 3rem; }       /* 48px */
+/*h3.h3-xs { font-size: 2.5rem; }     !* 40px *!*/
+/*h3.h3-sm { font-size: 2.625rem; }   !* 42px *!*/
+/*h3.h3-md { font-size: 2.75rem; }    !* 44px *!*/
+/*h3.h3-lg { font-size: 2.875rem; }   !* 46px *!*/
+/*h3.h3-xl { font-size: 3rem; }       !* 48px *!*/
 
-/* Header H2 */
-h2.h2-xs { font-size: 3.125rem; }   /* 50px */
-h2.h2-sm { font-size: 3.25rem; }    /* 52px */
-h2.h2-md { font-size: 3.375rem; }   /* 54px */
-h2.h2-lg { font-size: 3.5rem; }     /* 56px */
-h2.h2-xl { font-size: 3.75rem; }    /* 60px */
+/*!* Header H2 *!*/
+/*h2.h2-xs { font-size: 3.125rem; }   !* 50px *!*/
+/*h2.h2-sm { font-size: 3.25rem; }    !* 52px *!*/
+/*h2.h2-md { font-size: 3.375rem; }   !* 54px *!*/
+/*h2.h2-lg { font-size: 3.5rem; }     !* 56px *!*/
+/*h2.h2-xl { font-size: 3.75rem; }    !* 60px *!*/
 
 /*------------------------------------------*/
 /*  PARAGRAPHS
 /*------------------------------------------*/
 
-p.p-sm { font-size: 1rem; }        /* 16px */
-p { font-size: 1.0625rem; }        /* 17px */
-p.p-md { font-size: 1.125rem; }    /* 18px */
-p.p-lg { font-size: 1.1875rem; }   /* 19px */
-p.p-xl { font-size: 1.25rem; }     /* 20px */
+/*p.p-sm { font-size: 1rem; }        !* 16px *!*/
+/*p { font-size: 1.0625rem; }        !* 17px *!*/
+/*p.p-md { font-size: 1.125rem; }    !* 18px *!*/
+/*p.p-lg { font-size: 1.1875rem; }   !* 19px *!*/
+/*p.p-xl { font-size: 1.25rem; }     !* 20px *!*/
 
 /*------------------------------------------*/
 /*  LINK SETTINGS
