--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -2898,6 +2898,7 @@ strong {
   }
 
   h1, h2, h3, h4, h5, h6 {
+    font-family: arial, sans-serif;
     p, span, li, a, figcaption {
       font-size: inherit;
     }
